--- a/app/globals.css
+++ b/app/globals.css
@@ -7,9 +7,10 @@
   --primary: #003631;
   --primary-50: #d1fffb;
   --primary-200: #47ffee;
-  --gray-700: #717171;
-  --gray-950: #181818;
-  --gray-200: #ededed;
+  --primary-400: #008f82;
+  --grey-700: #717171;
+  --grey-950: #181818;
+  --grey-200: #ededed;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -49,9 +50,10 @@
   --color-primary: var(--primary);
   --color-primary-50: var(--primary-50);
   --color-primary-200: var(--primary-200);
-  --color-gray-700: var(--gray-700);
-  --color-gray-950: var(--gray-950);
-  --color-gray-200: var(--gray-200);
+  --color-primary-400: var(--primary-400);
+  --color-grey-700: var(--grey-700);
+  --color-grey-950: var(--grey-950);
+  --color-grey-200: var(--grey-200);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
