feat: platform highlights

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
   --grey-950: #181818;
   --grey-200: #ededed;
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  --background: #F7F7F7;
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
