--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,10 @@
 
 @custom-variant dark (&:is(.dark *));
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   --primary: #003631;
   --primary-50: #d1fffb;
